<resources>
    <string name="app_name">Gestor de Gastos</string>
    <string name="app_description">
        Esta aplicación permite gestionar de manera simple y eficiente tus gastos e ingresos diarios. Podés registrar cada movimiento, clasificarlo por categorías (como alimentación, transporte, servicios, entre otras) y mantener un control claro de tu situación financiera.\n\nAdemás, la app genera gráficos dinámicos que te ayudan a visualizar cómo se distribuyen tus gastos, identificar en qué estás gastando más y tomar decisiones informadas para mejorar tu economía personal.\n\nTambién ofrece la posibilidad de compartir cuentas con otras personas, lo que facilita la gestión de presupuestos compartidos. Esta funcionalidad resulta ideal para familias, parejas o grupos, permitiendo que todos los integrantes registren y consulten los movimientos en un mismo espacio, manteniendo la información organizada y actualizada en todo momento.
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gestión de Gastos</string>
    <string name="nav_header_subtitle">Gestiona tus gastos todo el tiempo.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Gastos e Ingresos</string>
    <string name="menu_accounts">Cuentas</string>
    <string name="menu_categories">Categorías</string>
    <string name="menu_charts">Gráficos</string>
    <string name="menu_alerts">Recordatorios</string>
    <string name="menu_about">Acerca De</string>
    <string name="menu_sign_in">Iniciar Sesión</string>
    <string name="menu_end_sesion">Cerrar Sesión</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenido "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Usuario y/o contraseña incorrecta/s"</string>
    <string name="login_failed_no">""</string>
</resources>